Update Covid Weekly Cases Region Share.ipynb

--- a/Covid Weekly Cases Region Share.ipynb
+++ b/Covid Weekly Cases Region Share.ipynb
@@ -1859,7 +1859,7 @@
     "import warnings\n",
     "fig1, ax1 = plt.subplots(figsize=(15,10))\n",
     "\n",
-    "EM = ax1.plot(RegCasesWeekPerCap2.Specimendate,RegCasesWeekPerCap2.WMPerHunThou, linewidth=5.0, label='East Midlands')\n",
+    "EM = ax1.plot(RegCasesWeekPerCap2.Specimendate,RegCasesWeekPerCap2.EMPerHunThou, linewidth=5.0, label='East Midlands')\n",
     "EoE = ax1.plot(RegCasesWeekPerCap2.Specimendate,RegCasesWeekPerCap2.EoEPerHunThou, linewidth=5.0, label='East of England')\n",
     "LDN = ax1.plot(RegCasesWeekPerCap2.Specimendate,RegCasesWeekPerCap2.LDNPerHunThou, linewidth=5.0, label='London')\n",
     "NE = ax1.plot(RegCasesWeekPerCap2.Specimendate,RegCasesWeekPerCap2.NEPerHunThou, linewidth=5.0, label='North East')\n",
